src/test/deca/context/valid/operation-binaire-or.deca
// Description:
//    Test or op
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    true || false;
}